<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_tickets"
        android:icon="@drawable/ic_tickets"
        android:title="@string/nav_tickets" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add_box"
        android:title="@string/submit" />
    <item
        android:id="@+id/nav_analytics"
        android:icon="@drawable/ic_analytics"
        android:title="@string/nav_analytics" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_settings" />
</menu>
